--- a/Booking/Views/Home/Index.cshtml
+++ b/Booking/Views/Home/Index.cshtml
@@ -1,6 +1,12 @@
 ﻿<main>
     <div class="home">
-        <div class="home_slider_container"></div>
+
+        <div class="home_slider_container">
+            <div class="ht_container">
+                <h1>Discover</h1>
+                <h1>the world</h1>
+            </div>
+        </div>
     </div>
 
     @{ Html.RenderPartial("_Camere"); }
@@ -43,13 +49,13 @@
                 </div>
 
                 <div class="col-lg-4 intro_col">
-                    <div class="intro_item">
+                    <div class="intro_item2">
                         <div class="intro_item_overlay"></div>
                         <div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
                             <div class="intro_date">May 25th - June 01st</div>
                             <div class="button intro_button"><div class="button_bcg"></div><a href="#">see more<span></span><span></span><span></span></a></div>
                             <div class="intro_center text-center">
-                                <h1>Milano</h1>
+                                <h1>Grecia</h1>
                                 <div class="intro_price">From $1450</div>
                                 <div class="rating rating_4">
                                     <i class="fa fa-star"></i>
@@ -64,13 +70,13 @@
                 </div>
 
                 <div class="col-lg-4 intro_col">
-                    <div class="intro_item">
+                    <div class="intro_item3">
                         <div class="intro_item_overlay"></div>
                         <div class="intro_item_content d-flex flex-column align-items-center justify-content-center">
                             <div class="intro_date">May 25th - June 01st</div>
                             <div class="button intro_button"><div class="button_bcg"></div><a href="#">see more<span></span><span></span><span></span></a></div>
                             <div class="intro_center text-center">
-                                <h1>Milano</h1>
+                                <h1>Giappone</h1>
                                 <div class="intro_price">From $1450</div>
                                 <div class="rating rating_4">
                                     <i class="fa fa-star"></i>
@@ -86,8 +92,4 @@
             </div>
         </div>
     </div>
-
-
-    @*<a class="btn btn-primary" href="/Paypal/PaymentWithPaypal">Paypal</a>*@
-
 </main>
