--- a/Booking/Views/Preferiti/Preferiti.cshtml
+++ b/Booking/Views/Preferiti/Preferiti.cshtml
@@ -21,7 +21,7 @@
                                         <div class="hotel-label">
                                             <a href="#">@preferito.Struttura.Nome</a>
                                         </div>
-                                        <img src="/Content/img/Cover.PNG" alt="immagine non trovata" class="foto-struttura">
+                                        <img src="/Content/img/@preferito.Struttura.Immagine" alt="immagine non trovata" class="foto-struttura">
                                     </div>
                                 </div>
                                 <div class="col-lg-12 info-container">
@@ -29,13 +29,13 @@
                                         <div>
                                             <div class="top">
                                                 <p class="prezzo">@preferito.Struttura.Citta</p>
-                                                <div class="offer_reviews">
+                                                @*<div class="offer_reviews">
                                                     <div class="offer_reviews_content">
                                                         <div class="offer_reviews_title">very good</div>
                                                         <div class="offer_reviews_subtitle">100 reviews</div>
                                                     </div>
                                                     <div class="offer_reviews_rating text-center">8.1</div>
-                                                </div>
+                                                </div>*@
                                             </div>
                                             <div class="rating_r rating_r_5 offers_rating" data-rating="5">
                                                 <i class="fa-solid fa-star"></i>
