--- a/Booking/Views/Prenota/Storico.cshtml
+++ b/Booking/Views/Prenota/Storico.cshtml
@@ -1,47 +1,73 @@
 ﻿@model List<Booking.Prenotazione>
 
-<section>
+<div class="offer_hero">
+    <div class="offer_content">
+        <div class="offer_title">Booking</div>
+    </div>
+    <div class="home_slider_container"></div>
+</div>
+
+<section class="history_section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="offers_grid">
-                    @foreach (var prenotazione in Model)
-                    {
-                        <div class="row justify-content-center mt-5">
-                            <div class="col-lg-1 temp_col"></div>
-                            <div class="col-lg-3">
-                                <div class="img-container">
-                                    <img src="~/Content/img/@prenotazione.Camera.Struttura.Immagine" alt="immagine non trovata" class="foto-struttura" />
-                                </div>
-                            </div>
-                            <div class="col-lg-8 info-container">
-                                <div class="top">
-                                    <strong>@prenotazione.Camera.Struttura.Nome</strong>
-                                    <p>@prenotazione.DataPrenotazione.ToShortDateString()</p>
-                                </div>
-                                <p>@prenotazione.Camera.Struttura.Citta</p>
-                                <div class="button book_button">@Html.ActionLink("Lascia recensione", "Recensione", "Recensione", new { id = @prenotazione.Camera.Struttura.IdStruttura }, null)</div>
-                                <div>
-                                    <button class="show-modal">Elimina</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mymodal">
-                            <span class="overlay"></span>
-                            <div class="modal-box">
-                                <i class="fa-regular fa-trash-can"></i>
-                                <h2>Rimuovi prenotazione</h2>
 
-                                <div class="buttons">
-                                    <div class="button book_button">@Html.ActionLink("Elimina", "EliminaPrenotazione", "Prenota", new { id = @prenotazione.IdPrenotazione }, null)</div>
-                                    <button class="button close-btn mt-3">Mantieni</button>
+                @if (Model.Any())
+                {
+                    <div class="history_grid">
+                        @foreach (var prenotazione in Model)
+                        {
+                            <div class="row justify-content-around mt-5 history_box">
+                                <div class="col-lg-1 temp_col"></div>
+                                <div class="col-lg-3">
+                                    <div class="img-container">
+                                        <img src="~/Content/img/@prenotazione.Camera.Struttura.Immagine" alt="immagine non trovata" class="foto-struttura_booked" />
+                                    </div>
+                                </div>
+                                <div class="col-lg-8 info-container">
+                                    <div class="history_container">
+                                        <div class="top">
+                                            <p class="prezzo">@prenotazione.Camera.Struttura.Nome</p>
+                                            <p><strong>@prenotazione.DataPrenotazione.ToShortDateString()</strong></p>
+                                        </div>
+                                        <p>@prenotazione.Camera.Struttura.Citta</p>
+                                        <div class="history_buttons">
+                                            <div class="button book_button">@Html.ActionLink("Lascia recensione", "Recensione", "Recensione", new { id = @prenotazione.Camera.Struttura.IdStruttura }, null)</div>
+                                            <div class="button book_button">@Html.ActionLink("Vedi struttura", "DettaglioStruttura", "Struttura", new { id = @prenotazione.Camera.Struttura.IdStruttura }, null)</div>
+                                            <div class="button delete_button">
+                                                <a class="show-modal">Elimina</a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    }
-                </div>
+                            <div class="mymodal">
+                                <span class="overlay"></span>
+                                <div class="modal-box">
+                                    <i class="fa-regular fa-trash-can"></i>
+                                    <h2>Rimuovi prenotazione</h2>
+
+                                    <div class="buttons">
+                                        <div class="button book_button">@Html.ActionLink("Elimina", "EliminaPrenotazione", "Prenota", new { id = @prenotazione.IdPrenotazione }, null)</div>
+                                        <button class="button close-btn mt-3">Mantieni</button>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                }
+                else
+                {
+                    <div class="empty_list">
+                        <h2>La lista è vuota:</h2>
+                        <ul class="fv_list">
+                            <li>1. Cerca una struttura dove soggiornare</li>
+                            <li>2. Quando ne trovi una che ti piace, prenotala!</li>
+                            <li>3. Qui troverai tutto il tuo storico</li>
+                        </ul>
+                    </div>
+                }
             </div>
         </div>
     </div>
 </section>
-
