--- a/Booking/Views/Recensione/Recensioni.cshtml
+++ b/Booking/Views/Recensione/Recensioni.cshtml
@@ -17,7 +17,7 @@
                 <div class="review row mt-4">
                     <div class="col-lg-1">
                         <div class="review_image">
-                            <img src="~/Content/img/Cover.PNG" alt="" />
+                            <img src="~/Content/img/user1.jpg" alt="" />
                         </div>
                     </div>
                     <div class="col-lg-11">
