--- a/Booking/Content/StyleSheet.css
+++ b/Booking/Content/StyleSheet.css
@@ -1,14 +1,20 @@
-﻿main {
+﻿@import url("https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
+body {
+  font-family: "Open Sans", sans-serif !important;
+}
+
+main {
   margin-right: auto;
   margin-left: auto;
   /*margin-top: 5.6rem;*/
   background-color: #f5f5f5;
 }
 
-section {
-  margin-top: 5.6rem;
-}
-
+/*section {
+    margin-top: 5.6rem;
+}*/
 /*HOME*/
 .home {
   width: 100%;
@@ -24,8 +30,35 @@ section {
   background-color: rgba(49, 18, 75, 0.5);
 }
 
+.ht_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.ht_container h1:nth-child(1) {
+  font-size: 5rem;
+  font-weight: 900;
+  color: #FFFFFF;
+  text-transform: uppercase;
+}
+
+@media (max-width: 490px) {
+  .ht_container h1:nth-child(1) {
+    font-size: 4rem;
+  }
+}
+.ht_container h1:nth-child(2) {
+  font-size: 4rem;
+  margin-top: -12px;
+  font-family: "Nothing You Could Do", cursive;
+  color: #FFFFFF;
+}
+
 /*********************************
-7. Intro
+Intro
 *********************************/
 .button_bcg {
   position: absolute;
@@ -74,6 +107,24 @@ section {
   width: 100%;
   height: 425px;
   background-image: url(img/pexels-tuur-tisseghem-2954412.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.intro_item2 {
+  width: 100%;
+  height: 425px;
+  background-image: url(img/pexels-aleksandar-pasaric-1285625.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
+
+.intro_item3 {
+  width: 100%;
+  height: 425px;
+  background-image: url(img/pexels-aleksandar-pasaric-2506923.jpg);
   background-size: cover;
   background-position: center;
   position: relative;
@@ -378,6 +429,23 @@ section {
 }
 
 /*NAVBAR*/
+.nav_link::after {
+  display: block;
+  position: relative;
+  left: -1px;
+  bottom: -11px;
+  width: calc(100% + 2px);
+  height: 2px;
+  background: linear-gradient(to right, #fa9e1b, #8d4fff);
+  content: "";
+  opacity: 0;
+  transition: all 200ms ease;
+}
+
+.nav_link:hover::after {
+  opacity: 1;
+}
+
 .header {
   /*position: fixed;*/
   position: relative;
@@ -418,11 +486,17 @@ section {
 .header #check {
   display: none;
 }
-.header .my-navbar a {
-  font-size: 1.15rem;
-  color: white;
+.header .my-navbar {
+  display: flex;
+  flex-direction: row;
+}
+.header .my-navbar .nav_link {
+  font-family: "Open Sans", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #FFFFFF;
+  text-transform: uppercase;
   text-decoration: none;
-  font-weight: 500;
   margin-left: 2.5rem;
 }
 .header .icons {
@@ -523,6 +597,14 @@ section {
   margin-bottom: 0;
 }
 
+.option-text {
+  padding-left: 0.5em;
+}
+
+.option a {
+  text-decoration: none;
+}
+
 .list .option:hover {
   background: #f2f2f2;
 }
@@ -552,6 +634,8 @@ section {
   }
   .header .my-navbar {
     position: absolute;
+    flex-direction: column;
+    justify-content: center;
     top: 100%;
     left: 0;
     width: 100%;
@@ -560,16 +644,23 @@ section {
     overflow: hidden;
     transition: 0.3s ease;
   }
+  .header .my-navbar .nav_link:hover::after {
+    opacity: 0;
+  }
   .header .my-navbar a {
     display: block;
     font-size: 1.1rem;
-    margin: 1.5rem 0;
+    margin: 1rem 0;
+    margin-left: 0;
     text-align: center;
     text-transform: uppercase;
     color: white;
     transform: translateY(-50px);
     opacity: 0;
     transition: 0.3s ease;
+  }
+  .header .my-navbar .nav_link {
+    margin-left: 0;
   }
   #button {
     position: absolute;
@@ -624,6 +715,15 @@ section {
   background: #fa9e1b;
   overflow: hidden;
 }
+.hotel-label p {
+  display: block;
+  font-size: 16px;
+  font-weight: 700;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  line-height: 30px;
+  text-decoration: none;
+}
 
 .hotel-label a {
   display: block;
@@ -646,6 +746,12 @@ section {
 }
 
 .foto-struttura {
+  width: 100%;
+  height: 15em;
+  object-fit: cover;
+}
+
+.foto-struttura_booked {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -745,6 +851,32 @@ section {
 
 .button:hover a {
   color: #fff;
+}
+
+/************
+Icone servizi
+************/
+.rw_section {
+  margin-top: 5.6rem;
+  margin-bottom: 5.6rem;
+}
+
+/************
+Lascia recensione
+************/
+.offers_icons_list {
+  display: flex;
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0.5rem 0;
+}
+
+.offers_icons_item {
+  padding-right: 1em;
+}
+
+.offers_icons_item img {
+  height: 30px;
 }
 
 /*********************************
@@ -954,7 +1086,7 @@ section {
   padding-right: 15px;
   font-size: 13px;
   font-weight: 600;
-  color: #929191;
+  /*color: #929191;*/
 }
 
 .search_item:first-of-type {
@@ -1110,7 +1242,7 @@ section {
   margin-top: 45px;
 }
 .hotel_info_text p {
-  color: #929191;
+  color: #414141;
   line-height: 1.6;
 }
 
@@ -1189,11 +1321,14 @@ section {
 
 .review_image {
   width: 60px;
+  height: 60px;
   border-radius: 50%;
   overflow: hidden;
 }
 .review_image img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .reviews_container {
@@ -1788,7 +1923,11 @@ FOOTER
 13.1 Footer - About
 *********************************/
 .footer_about {
-  padding-top: 67px;
+  /*padding-top: 67px;*/
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .footer_logo {
@@ -1823,6 +1962,8 @@ FOOTER
   position: relative;
   width: 100%;
   height: 100%;
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 .footer_social_item a i {
@@ -1881,6 +2022,7 @@ FOOTER
   font-size: 14px;
   font-weight: 400;
   color: #FFFFFF;
+  text-decoration: none;
 }
 
 .footer_blog_title a:hover {
@@ -1922,6 +2064,10 @@ FOOTER
   line-height: 33px;
   padding-left: 25px;
   padding-right: 25px;
+  text-decoration: none;
+}
+.tag_item a:hover {
+  color: #FFFFFF;
 }
 
 /*********************************
@@ -2176,14 +2322,15 @@ label {
   padding: 20px;
 }
 
-input[type=text] {
+input[type=text], input[type=email], input[type=password] {
   width: 100%;
   padding: 8px 10px 10px;
-  margin: 15px 0;
+  margin: 15px 0px;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  background-color: #eee;
 }
 
 .btn {
@@ -2217,4 +2364,641 @@ input[type=text] {
 .highlight {
   font-weight: 800;
   font-size: medium;
+}
+
+/*********************************
+STORICO
+*********************************/
+.history_section {
+  margin-top: 3.6rem;
+  margin-bottom: 5.6rem;
+}
+
+.history_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.history_grid {
+  width: 100%;
+}
+.history_grid .img-container {
+  height: 12em;
+}
+
+.history_buttons {
+  display: flex;
+}
+
+.history_buttons div:nth-child(2) {
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.history_box {
+  border: solid 1px #cbcbcb;
+  padding: 1em;
+  border-radius: 10px;
+}
+
+.delete_button {
+  background: #c72a2a;
+  margin-top: 2px;
+  cursor: pointer;
+}
+
+/*********************************
+PROFILO
+*********************************/
+.user_section {
+  margin-top: 5.6rem;
+  margin-bottom: 5.6rem;
+}
+
+/*********************************
+LOGIN
+*********************************/
+.login_section {
+  margin-top: 5.6rem;
+  margin-bottom: 5.6rem;
+  display: flex;
+  justify-content: center;
+}
+
+.login_section::after {
+  content: "";
+  background-image: url(img/pexels-asad-photo-maldives-15031960.jpg);
+  background-size: cover;
+  background-position: center;
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  z-index: -1;
+}
+
+.login_form {
+  background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+.login_form .lg_title {
+  font-weight: bold;
+  margin: 0;
+}
+.login_form p {
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
+}
+.login_form span {
+  font-size: 12px;
+}
+.login_form a {
+  color: #333;
+  font-size: 14px;
+  text-decoration: none;
+  margin: 15px 0;
+}
+
+.lg_button {
+  border-radius: 20px;
+  border: 1px solid #FF4B2B;
+  background-color: #FF4B2B;
+  color: #FFFFFF;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+
+.lg_button:active {
+  transform: scale(0.95);
+}
+
+.lg_button:focus {
+  outline: none;
+}
+
+.lg_button.ghost {
+  background-color: transparent;
+  border-color: #FFFFFF;
+}
+
+.login_input {
+  background-color: #eee;
+  padding: 8px 10px;
+  margin: 8px 0;
+  width: 65%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.login_container {
+  font-family: "Montserrat", sans-serif;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 85%;
+  max-width: 100%;
+  height: 45em;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+
+.login_container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+}
+
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.login_container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: show 0.6s;
+}
+
+@keyframes show {
+  0%, 49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+  50%, 100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.login_container.right-panel-active .overlay-container {
+  transform: translateX(-100%);
+}
+
+.overlay_login {
+  background: #FF416C;
+  background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+  background: linear-gradient(to right, #FF4B2B, #FF416C);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #FFFFFF;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.login_container.right-panel-active .overlay_login {
+  transform: translateX(50%);
+}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.login_container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.login_container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+.social-container {
+  margin: 20px 0;
+}
+
+.social-container a {
+  border: 1px solid #DDDDDD;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
+  height: 40px;
+  width: 40px;
+}
+
+/*********************************
+LOGIN VERTICALE
+*********************************/
+/*@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+.login_section {
+    margin-top: 5.6rem;
+    margin-bottom: 5.6rem;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.login_section::after {
+    content: "";
+    background-image: url(img/pexels-asad-photo-maldives-15031960.jpg);
+    background-size: cover;
+    background-position: center;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: fixed;
+    z-index: -1;
+}
+
+.login_form {
+    background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 25px;
+    height: 100%;
+    text-align: center;
+
+    .lg_title {
+        font-weight: bold;
+        margin: 0;
+    }
+
+    p {
+        font-size: 14px;
+        font-weight: 100;
+        line-height: 20px;
+        letter-spacing: 0.5px;
+        margin: 20px 0 30px;
+    }
+
+    span {
+        font-size: 12px;
+    }
+
+    a {
+        color: #333;
+        font-size: 14px;
+        text-decoration: none;
+        margin: 15px 0;
+    }
+}
+
+.lg_button {
+    border-radius: 20px;
+    border: 1px solid #FF4B2B;
+    background-color: #FF4B2B;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
+
+.lg_button:active {
+    transform: scale(0.95);
+}
+
+.lg_button:focus {
+    outline: none;
+}
+
+.lg_button.ghost {
+    background-color: transparent;
+    border-color: #FFFFFF;
+}
+
+
+.login_input {
+    background-color: #eee;
+    padding: 8px 10px;
+    margin: 8px 0;
+    width: 65%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.login_container {
+    font-family: "Montserrat", sans-serif;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    position: relative;
+    overflow: hidden;
+    width: 85%;
+    max-width: 100%;
+    height: 45em;
+}
+
+.form-container {
+    position: absolute;
+    bottom: 0;
+    height: 70%;
+    transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+    left: 0;
+    width: 100%;
+    z-index: 2;
+}
+
+.login_container.right-panel-active .sign-in-container {
+    transform: translateY(-100%);
+}
+
+.sign-up-container {
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transform: translateY(-100%);
+    z-index: 1;
+}
+
+.login_container.right-panel-active .sign-up-container {
+    transform: translateY(0%);
+    opacity: 1;
+    z-index: 5;
+    animation: show 0.6s;
+}
+
+@keyframes show {
+    0%, 49.99% {
+        opacity: 0;
+        z-index: 1;
+    }
+
+    50%, 100% {
+        opacity: 1;
+        z-index: 5;
+    }
+}
+
+.overlay-container {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 30%;
+    overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    z-index: 100;
+}
+
+.login_container.right-panel-active .overlay-container {
+    transform: translateY(0%);
+}
+
+.overlay_login {
+    background: linear-gradient(to top, #FF4B2B, #FF416C);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 0;
+    color: #FFFFFF;
+    position: relative;
+    height: 200%;
+    width: 100%;
+    transform: translateY(0);
+    transition: transform 0.6s ease-in-out;
+}
+
+.login_container.right-panel-active .overlay_login {
+    transform: translateY(-50%);
+}
+
+.overlay-panel {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    transform: translateX(0);
+    transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+    transform: translateY(-100%);
+}
+
+.login_container.right-panel-active .overlay-left {
+    transform: translateY(25%);
+}
+
+.overlay-right {
+    right: 0;
+    transform: translateY(-25%);
+}
+
+.login_container.right-panel-active .overlay-right {
+    transform: translateY(-25%);
+}
+
+.social-container {
+    margin: 20px 0;
+}
+
+.social-container a {
+    border: 1px solid #DDDDDD;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
+}*/
+/*********************************
+SUCCESS
+*********************************/
+.success_view {
+  padding-top: 5.6rem;
+  padding-bottom: 5.6rem;
+  display: flex;
+  justify-content: center;
+}
+
+.success_view::after {
+  content: "";
+  background-image: url(img/pexels-asad-photo-maldives-15031960.jpg);
+  background-size: cover;
+  background-position: center;
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  z-index: -1;
+}
+
+.success_card {
+  font-family: "Montserrat", sans-serif;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  padding: 60px;
+  width: 50%;
+  text-align: center;
+}
+.success_card .check {
+  border-radius: 200px;
+  height: 200px;
+  width: 200px;
+  background: #f5f5f5;
+  margin: 0 auto;
+}
+.success_card .back_button {
+  background: #31124b;
+  width: 60%;
+  border-radius: 27px;
+  margin: 0 auto;
+}
+.success_card .back_button a {
+  display: block;
+  font-size: 13px;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  line-height: 53px;
+  white-space: nowrap;
+  text-align: center;
+  text-decoration: none;
+}
+.success_card h1 {
+  color: #88B04B;
+  font-weight: 900;
+  font-size: 2.5rem;
+  margin: 0.5em 0;
+}
+.success_card p {
+  color: #404F5E;
+  font-size: 1rem;
+  margin: 0;
+}
+.success_card i {
+  color: #9ABC66;
+  font-size: 100px;
+  line-height: 200px;
+}
+
+.failure_card {
+  font-family: "Montserrat", sans-serif;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  padding: 60px;
+  width: 50%;
+  text-align: center;
+}
+.failure_card .check {
+  border-radius: 200px;
+  height: 200px;
+  width: 200px;
+  background: #f5f5f5;
+  margin: 0 auto;
+}
+.failure_card .back_button {
+  background: #31124b;
+  width: 60%;
+  border-radius: 27px;
+  margin: 0 auto;
+}
+.failure_card .back_button a {
+  display: block;
+  font-size: 13px;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  line-height: 53px;
+  white-space: nowrap;
+  text-align: center;
+  text-decoration: none;
+}
+.failure_card h1 {
+  color: #d33a3a;
+  font-weight: 900;
+  font-size: 2.5rem;
+  margin: 0.5em 0;
+}
+.failure_card p {
+  color: #404F5E;
+  font-size: 1rem;
+  margin: 0;
+}
+.failure_card i {
+  color: #d33a3a;
+  font-size: 100px;
+  line-height: 200px;
 }
