--- a/Booking/Views/Prenota/Riepilogo.cshtml
+++ b/Booking/Views/Prenota/Riepilogo.cshtml
@@ -49,7 +49,7 @@
                         </table>
                     </div>
                     <div class="payment-info">
-                        <h3>Payment Info</h3>
+                        <h3>I tuoi dati</h3>
                         <form>
                             <label>Nome</label>
                             <input type="text" name="firstname" value="@(ViewBag.nomeUtente != null ? ViewBag.nomeUtente : "")">
@@ -63,6 +63,7 @@
 
                             <input type="submit" value="Prenota" />
                         }
+                        @*<a class="btn btn-primary" href="/Paypal/PaymentWithPaypal">Paypal</a>*@
                     </div>
                 </div>
             </div>
