--- a/Booking/Views/Utente/Registrati.cshtml
+++ b/Booking/Views/Utente/Registrati.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Registrati</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm(new { @class = "myform" })) 
 {
     @Html.AntiForgeryToken()
     
